Add permission entities
