# src/db/schema.ts
@@ -1,6 +1,7 @@
 export * from "@/features/accounts/account.db";
 export * from "@/features/matches/match.db";
 export * from "@/features/match-stat-events/match-stat-event.db";
+export * from "@/features/permissions/permission.db";
 export * from "@/features/players/player.db";
 export * from "@/features/recordings/recording.db";
 export * from "@/features/roles/role.db";
